backend/internal/architecture/testdata/invalid/internal/platform/fake_embed_alias.go
package platform

import emb "example.com/embed"

//go:embed asset.txt
var fakeAlias emb.FS
